test/compile-fail/parse/unexpected-token/expected.txt
error: could not parse ./test/compile-fail/parse/unexpected-token/top.rhdl: unexpected token
  ┌─ ./test/compile-fail/parse/unexpected-token/top.rhdl:3:1
  │
3 │ f
  │ ^ expected any of ["TokArch", "TokBraceClose", "TokConst", "TokEntity", "TokEnum", "TokFn", "TokImpl", "TokMod", "TokPriv", "TokPub", "TokStruct", "TokTokenType", "TokTrait", "TokUse"]

